# numeric_bindings

./: README.md
boost/numeric/bindings/: conj.hpp  herm.hpp  left.hpp  lower.hpp  right.hpp  trans.hpp  unit_lower.hpp  unit_upper.hpp  upper.hpp
boost/numeric/bindings/blas/: level1.hpp  level2.hpp
boost/numeric/bindings/blas/detail/: blas.h
boost/numeric/bindings/blas/level1/: dot.hpp  dotc.hpp  doth.hpp  iamax.hpp
boost/numeric/bindings/blas/level2/: gerh.hpp  geru.hpp
boost/numeric/bindings/eigen/: matrix.hpp  vector.hpp
boost/numeric/bindings/traits/: type.hpp  type_traits.hpp
boost/numeric/bindings/traits/detail/: utils.hpp
boost/numeric/bindings/ublas/: banded.hpp  matrix_proxy.hpp
boost/numeric/bindings/umfpack/: umfpack_overloads.hpp
examples/blas/: CMakeLists.txt  asum.cc  axpy.cc  copy.cc  dot.cc  doth.cc  gbmv.cc  gemm.cc  gemv.cc  ger.cc  gerh.cc  hbmv.cc  hemm.cc  hemv.cc  her.cc  her2.cc  her2k.cc  herk.cc  hpmv.cc  hpr.cc  hpr2.cc  iamax.cc  nrm2.cc  print.hpp  sbmv.cc  scal.cc  set.cc  spmv.cc  spr.cc  spr2.cc  swap.cc  symm.cc  symv.cc  syr.cc  syr2.cc  syr2k.cc  syrk.cc  tbmv.cc  tbsv.cc  tpmv.cc  (+5 more)
examples/lapack/: CMakeLists.txt  gbsv.cc  geev.cc  gesv.cc  gtsv.cc  hbev.cc  heev.cc  hpev.cc  posv.cc  print.hpp  ptsv.cc  random.hpp  sbev.cc  spev.cc  stev.cc  syev.cc  sysv.cc
