cmake_minimum_required(VERSION 2.8.9)

set(CMAKE_CXX_EXTENSIONS off)
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

include_directories(../../ ../../../../eigen/)

project(Blas_tests)

add_executable(set set.cc)
target_link_libraries(set blas dl)
add_executable(copy copy.cc)
target_link_libraries(copy blas dl)
add_executable(swap swap.cc)
target_link_libraries(swap blas dl)
add_executable(scal scal.cc)
target_link_libraries(scal blas dl)
add_executable(dot dot.cc)
target_link_libraries(dot blas dl)
add_executable(axpy axpy.cc)
target_link_libraries(axpy blas dl)
add_executable(nrm2 nrm2.cc)
target_link_libraries(nrm2 blas dl)
add_executable(asum asum.cc)
target_link_libraries(asum blas dl)

add_executable(gemv gemv.cc)
target_link_libraries(gemv blas dl)
add_executable(gbmv gbmv.cc)
target_link_libraries(gbmv blas dl)
add_executable(hemv hemv.cc)
target_link_libraries(hemv blas dl)
add_executable(hbmv hbmv.cc)
target_link_libraries(hbmv blas dl)
add_executable(hpmv hpmv.cc)
target_link_libraries(hpmv blas dl)
