cmake_minimum_required(VERSION 2.8.9)

set(CMAKE_CXX_EXTENSIONS off)
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

include_directories(../../ /usr/include/eigen3)

project(Blas_tests)

add_executable(set set.cc)
target_link_libraries(set blas dl)
add_executable(copy copy.cc)
target_link_libraries(copy blas dl)
add_executable(swap swap.cc)
target_link_libraries(swap blas dl)
add_executable(scal scal.cc)
target_link_libraries(scal blas dl)
add_executable(dot dot.cc)
target_link_libraries(dot blas dl)
add_executable(doth doth.cc)
target_link_libraries(doth blas dl)
add_executable(axpy axpy.cc)
target_link_libraries(axpy blas dl)
add_executable(nrm2 nrm2.cc)
target_link_libraries(nrm2 blas dl)
add_executable(asum asum.cc)
target_link_libraries(asum blas dl)
add_executable(iamax iamax.cc)
target_link_libraries(iamax blas dl)

add_executable(gemv gemv.cc)
target_link_libraries(gemv blas dl)
add_executable(gbmv gbmv.cc)
target_link_libraries(gbmv blas dl)
add_executable(hemv hemv.cc)
target_link_libraries(hemv blas dl)
add_executable(hbmv hbmv.cc)
target_link_libraries(hbmv blas dl)
add_executable(hpmv hpmv.cc)
target_link_libraries(hpmv blas dl)
add_executable(symv symv.cc)
target_link_libraries(symv blas dl)
add_executable(sbmv sbmv.cc)
target_link_libraries(sbmv blas dl)
add_executable(spmv spmv.cc)
target_link_libraries(spmv blas dl)
add_executable(trmv trmv.cc)
target_link_libraries(trmv blas dl)
add_executable(tbmv tbmv.cc)
target_link_libraries(tbmv blas dl)
add_executable(tpmv tpmv.cc)
target_link_libraries(tpmv blas dl)
add_executable(trsv trsv.cc)
target_link_libraries(trsv blas dl)
add_executable(tbsv tbsv.cc)
target_link_libraries(tbsv blas dl)
add_executable(tpsv tpsv.cc)
target_link_libraries(tpsv blas dl)
add_executable(ger ger.cc)
target_link_libraries(ger blas dl)
add_executable(gerh gerh.cc)
target_link_libraries(gerh blas dl)
add_executable(her her.cc)
target_link_libraries(her blas dl)
add_executable(hpr hpr.cc)
target_link_libraries(hpr blas dl)
