cmake_minimum_required(VERSION 2.8.9)

set(CMAKE_CXX_EXTENSIONS off)
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

include_directories(../../ /usr/include/eigen3)

project(Lapack_tests)

add_executable(gesv gesv.cc)
target_link_libraries(gesv blas lapack dl)
add_executable(gbsv gbsv.cc)
target_link_libraries(gbsv blas lapack dl)
add_executable(sysv sysv.cc)
target_link_libraries(sysv blas lapack dl)
add_executable(posv posv.cc)
target_link_libraries(posv blas lapack dl)
add_executable(gtsv gtsv.cc)
target_link_libraries(gtsv blas lapack dl)
add_executable(ptsv ptsv.cc)
target_link_libraries(ptsv blas lapack dl)

add_executable(geev geev.cc)
target_link_libraries(geev blas lapack dl)
add_executable(heev heev.cc)
target_link_libraries(heev blas lapack dl)
add_executable(hpev hpev.cc)
target_link_libraries(hpev blas lapack dl)
add_executable(hbev hbev.cc)
target_link_libraries(hbev blas lapack dl)
add_executable(syev syev.cc)
target_link_libraries(syev blas lapack dl)
